fix alignment of problem lists

--- a/analysis/monkbrewmaster/src/modules/problems/PurifyingBrew/PurifyingBrew.scss
+++ b/analysis/monkbrewmaster/src/modules/problems/PurifyingBrew/PurifyingBrew.scss
@@ -1,5 +1,7 @@
 .purify-reasons {
   margin-top: 1em;
+  align-self: start;
+
   &.hits-list td:first-child {
     min-width: max-content;
   }
